Fix scroll jumping at chat info

--- a/src/Components/Message/Media/Document.css
+++ b/src/Components/Message/Media/Document.css
@@ -59,7 +59,6 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    user-select: none;
 }
 
 @keyframes spin {
